# flask-on-cloudrun

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run.sh
template/: dashboard.html  login.html
